NXP-32437: cleanup / format